--- a/package.json
+++ b/package.json
@@ -52,16 +52,17 @@
     "peerDependencies": {
         "@capacitor/core": ">=4"
     },
-    "dependencies": {},
+    "dependencies": {
+    },
     "devDependencies": {
         "@capacitor/android": "4.2.0",
         "@capacitor/core": "4.2.0",
         "@capacitor/ios": "4.2.0",
         "@types/jest": "29.0.3",
-        "jest": "29.0.3",
-        "ts-jest": "29.0.1",
         "eslint": "8.23.1",
+        "jest": "29.0.3",
         "rimraf": "3.0.2",
+        "ts-jest": "29.0.1",
         "typescript": "4.3.5"
     }
 }
