--- a/ios/ByteowlsCapacitorOauth2/Podfile
+++ b/ios/ByteowlsCapacitorOauth2/Podfile
@@ -2,11 +2,11 @@ require_relative '../../node_modules/@capacitor/ios/scripts/pods_helpers'
 # Uncomment the next line to define a global platform for your project
 platform :ios, '13.0'
 
-target 'ByteowlsCapacitorOauth2' do
+target 'TrimbleQuestCapacitorOauth2' do
   # Comment the next line if you're not using Swift and don't want to use dynamic frameworks
   use_frameworks!
 
-  # Pods for ByteowlsCapacitorOauth2
+  # Pods for TrimbleQuestCapacitorOauth2
   pod 'Capacitor', :path => '../../node_modules/@capacitor/ios'
   pod 'CapacitorCordova', :path => '../../node_modules/@capacitor/ios'
   pod 'OAuthSwift', :git => 'https://github.com/OAuthSwift/OAuthSwift.git'
